--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "start": "node .",
         "nodemon": "nodemon"
     },
-    "main": "https-server-base.js",
+    "main": "https-server-auth.js",
     "type": "module",
     "dependencies": {
         "express": "^4.21.1"
